# Media

./: API.md  DESIGN.md  LICENSE  README.md  build_index.py  compare.html  index.html  openapi.yaml  patterns.html
.github/ISSUE_TEMPLATE/: curation.md
.github/workflows/: build-api.yml
_curate/: INSTRUCTIONS.md  _candidates100.json  _papers_grouped.json
_curate/results/: PMC10119117.json  PMC10132767.json  (+78 more)
_foodcurate/: INSTRUCTIONS.md  _food100.json
assets/: media.css  media.js
client/: README.md  pyproject.toml
client/pymediadb/: __init__.py
data/: _quarantine.json  aliases.json  coverage.json  index.json  media_stats.json  presence_matrix.json  stats.json
tools/: add_assay_media.py  add_complex_media.py  add_formulated_growthdb.py  add_growthdb_media.py  apply_verification.py  assay_base_media.json  base_media.py  bigg_metabolite_dict.json  bigg_reverse_index.json  bmdb_extract.py  build_api_exports.py  build_bigg_dict.py  build_cluster_data.py  build_food_media.py  build_food_media_v2.py  build_media_stats.py  build_presence_matrix.py  build_usda_media_v2.py  build_xref.py  complex_ingredients.py  convert_seed.py  curate_name_formatting.py  curate_names.py  curate_oxygen.py  curate_references.py  curate_wellknown_media.py  enrich_coverage.py  expand_base_media.py  flag_extractions.py  formulate_base_media.py  hmdb_extract.py  hmdb_extract_v2.py  ingredient_composition_research.json  integrity_report.py  laboratory_media.py  map_foodb_compounds.py  map_metabolite.py  merge_duplicates.py  reference_links_researched.json  remap_media_unmapped.py  (+1 more)
(+13946 files in other folders)
